--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "multer": "^1.4.2",
     "nodejs-websocket": "^1.7.2"
   },
